--- a/chacha/New Arrival.html
+++ b/chacha/New Arrival.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>new-arrivalsNew-arrivals</title>
+  <title>New-arrivals</title>
   <link rel="stylesheet" href="./new.css" />
   <link rel="stylesheet" href="../navbar/style/navbar.css">
   <link rel="stylesheet" href="../humam_css/footer_h.css">
@@ -23,7 +23,7 @@
 
   <div id="display_sv">
     <div id="dummy_sv">
-      <h3> ##Refine By</h3><br />
+      <!-- <h3> ##Refine By</h3><br />
       <div>
         <h4>Categories</h4>
         <hr>
@@ -62,48 +62,48 @@
           <option value="">C Glow Range</option>
           <option value="">Kumkumadi Range</option>
         </select><br>
-        <p style="font-size: 16px">Build a Box</p>
+        <p style="font-size: 16px">Build a Box</p> -->
 
 
+    </div>
+  </div>
+  <div id="details_sv">
+    <p>New & Now</p>
+    <div id="filter">
+      <div id="filter1">
+        <h4>Filter BY:</h4>
+        <form>
+          <select id="type_sv" onChange="handleType()">
+            <option value="">Product Type</option>
+            <option value="New Arrivals">New Arrivals</option>
+          </select>
+
+          <select id="subtype_sv" onChange="handleSubtype()">
+            <option value="">Product Subtype</option>
+            <option value="Gel">Gel</option>
+            <option value="Oil">Oil</option>
+            <option value="Deodorant">Deodorant</option>
+            <option value="Face Wash">Face Wash</option>
+            <option value="Face cream">Face cream</option>
+          </select>
+
+        </form>
+      </div>
+      <div id="filter2">
+        <form>
+          <select id="price_sv" onChange="handlePrice()">
+            <option value="">Sort By Price</option>
+            <option value="LTH">Low to High</option>
+            <option value="HTL">High to Low</option>
+          </select>
+        </form>
       </div>
     </div>
-    <div id="details_sv">
-      <p>New & Now</p>
-      <div id="filter">
-        <div id="filter1">
-          <h4>Filter BY:</h4>
-          <form>
-            <select id="type_sv" onChange="handleType()">
-              <option value="">Product Type</option>
-              <option value="New Arrivals">New Arrivals</option>
-            </select>
-
-            <select id="subtype_sv" onChange="handleSubtype()">
-              <option value="">Product Subtype</option>
-              <option value="Gel">Gel</option>
-              <option value="Oil">Oil</option>
-              <option value="Deodorant">Deodorant</option>
-              <option value="Face Wash">Face Wash</option>
-              <option value="Face cream">Face cream</option>
-            </select>
-
-          </form>
-        </div>
-        <div id="filter2">
-          <form>
-            <select id="price_sv" onChange="handlePrice()">
-              <option value="">Sort By Price</option>
-              <option value="LTH">Low to High</option>
-              <option value="HTL">High to Low</option>
-            </select>
-          </form>
-        </div>
-      </div>
-      <img src="https://github.com/humamul/Cool-Coders/blob/main/images/text.gif?raw=true" alt="" />
-      <div id="product_sv">
-        <div id="container_sv"></div>
-      </div>
+    <img src="https://github.com/humamul/Cool-Coders/blob/main/images/text.gif?raw=true" alt="" />
+    <div id="product_sv">
+      <div id="container_sv"></div>
     </div>
+  </div>
   </div>
 
   <div id="footer_h">Footer</div>
@@ -113,6 +113,10 @@
 <script src="./products.js"></script>
 <a href=""></a>
 <script type="module">
+  import { sidebar } from "../components/sidebar.js"
+  let z = document.querySelector("#dummy_sv")
+  z.innerHTML = sidebar();
+
   import { navbar_h } from "../navbar/script/navbar.js";
   import { footer } from "../navbar/script/footer.js";
   // console.log(footer());
