Build Box added

--- a/Combos/combo.html
+++ b/Combos/combo.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="combo.css">
-    <link rel="stylesheet" href="../humam_css/footer_h.css">
+    <link rel="stylesheet" href="../NmP_css/footer_h.css">
     <link rel="stylesheet" href="../navbar/style/navbar.css">
 </head>
 
@@ -62,7 +62,7 @@
 </body>
 
 </html>
-<script src="combo.js"></script>
+<script src="combo.js">name</script>
 <script type="module">
 
     import { navbar_h } from "../navbar/script/navbar.js";
