--- a/Bestseller/Bestsellers.html
+++ b/Bestseller/Bestsellers.html
@@ -8,7 +8,7 @@
   <title>Sites-Bestsellers</title>
   <link rel="stylesheet" href="bestseller.css" />
   <link rel="stylesheet" href="../navbar/style/navbar.css">
-  <link rel="stylesheet" href="../humam_css/footer_h.css">
+  <link rel="stylesheet" href="../NmP_css/footer_h.css">
   <link rel="shortcut icon"
     href="https://www.bathandbodyworks.in/on/demandware.static/Sites-BathAndBodyWorks-Site/-/default/dw9d49eb87/images/favicons/favicon-196x196.png"
     type="image/x-icon">
@@ -65,7 +65,7 @@
 </body>
 
 </html>
-<script src="products.js"></script>
+<script src="bestseller.js"></script>
 <a href=""></a>
 
 <script type="module">
