--- a/Body Care/Body Care.html
+++ b/Body Care/Body Care.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Body Care.css">
-    <link rel="stylesheet" href="../humam_css/footer_h.css">
+    <link rel="stylesheet" href="../NmP_css/footer_h.css">
     <link rel="stylesheet" href="../navbar/style/navbar.css">
 </head>
 
