--- a/Hair Care/Hair Care.html
+++ b/Hair Care/Hair Care.html
@@ -8,7 +8,7 @@
   <title>Sites-BathAndBodyWorks-Sites</title>
   <link rel="stylesheet" href="./Hair Care.css" />
   <link rel="stylesheet" href="../navbar/style/navbar.css">
-  <link rel="stylesheet" href="../humam_css/footer_h.css">
+  <link rel="stylesheet" href="../NmP_css/footer_h.css">
   <link rel="shortcut icon"
     href="https://www.bathandbodyworks.in/on/demandware.static/Sites-BathAndBodyWorks-Site/-/default/dw9d49eb87/images/favicons/favicon-196x196.png"
     type="image/x-icon">
