--- a/New Arrivals/New Arrival.html
+++ b/New Arrivals/New Arrival.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>New-arrivals</title>
-  <link rel="stylesheet" href="./new.css" />
+  <link rel="stylesheet" href="./NewArrival.css" />
   <link rel="stylesheet" href="../navbar/style/navbar.css">
-  <link rel="stylesheet" href="../humam_css/footer_h.css">
+  <link rel="stylesheet" href="../NmP_css/footer_h.css">
   <link rel="shortcut icon"
     href="https://www.bathandbodyworks.in/on/demandware.static/Sites-BathAndBodyWorks-Site/-/default/dw9d49eb87/images/favicons/favicon-196x196.png"
     type="image/x-icon">
@@ -23,47 +23,6 @@
 
   <div id="display_sv">
     <div id="dummy_sv">
-      <!-- <h3> ##Refine By</h3><br />
-      <div>
-        <h4>Categories</h4>
-        <hr>
-        <p style="font-size: 16px">Shop All</p>
-        <p style="font-size: 16px"><a href="New Arrival.html" style="text-decoration: none;">New Arrivals</a></p>
-        <p style="font-size: 16px">Bestsellers</p>
-        <select id="" aria-placeholder="Skin Care" style="border:none; font-size: 15px;">
-          <option value="">Skin Care</option>
-          <option value="">By Product type</option>
-          <option value="">By Concern</option>
-          <option value="">By Skin Type</option>
-        </select><br>
-        <br>
-        <select id="" aria-placeholder="Hair Care" style="border:none;font-size: 15px">
-          <option value="">By Product type</option>
-          <option value="">By Hair Concern</option>
-        </select><br><br>
-        <select id="" aria-placeholder="Body Care" style="border:none;font-size: 15px">
-          <option value="">Bath and Body</option>
-        </select><br><br>
-        <select id="" aria-placeholder="Perfumes" style="border:none;font-size: 15px">
-          <option value="">All Perfumes</option>
-          <option value="">Perfumes For Her</option>
-          <option value="">Unisex Perfumes</option>
-          <option value="">Body Perfume</option>
-          <option value="">Little Luxuries</option>
-          <option value="">Gift Sets</option>
-        </select><br><br>
-        <select id="" aria-placeholder="Combos" style="border:none;font-size: 15px">
-          <option value="">All Combos</option>
-          <option value="">Bestsellers Combos</option>
-          <option value="">Skin Combos</option>
-          <option value="">Hair Combos</option>
-          <option value="">Body Combos</option>
-          <option value="">Perfumes Combos</option>
-          <option value="">C Glow Range</option>
-          <option value="">Kumkumadi Range</option>
-        </select><br>
-        <p style="font-size: 16px">Build a Box</p> -->
-
 
     </div>
   </div>
@@ -110,7 +69,7 @@
 </body>
 
 </html>
-<script src="./products.js"></script>
+<script src="./New_Arrival.js"></script>
 <a href=""></a>
 <script type="module">
   import { sidebar } from "../components/sidebar.js"
