--- a/PERFUMES/Perfumes.html
+++ b/PERFUMES/Perfumes.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Body Care.css">
-    <link rel="stylesheet" href="../humam_css/footer_h.css">
+    <link rel="stylesheet" href="Perfumes.css">
+    <link rel="stylesheet" href="../NmP_css/footer_h.css">
     <link rel="stylesheet" href="../navbar/style/navbar.css">
 </head>
 
@@ -64,7 +64,7 @@
 </body>
 
 </html>
-<script src="Body Care.js"></script>
+<script src="Perfumes.js"></script>
 <script type="module">
 
     import { navbar_h } from "../navbar/script/navbar.js";
