--- a/brave/brave.html
+++ b/brave/brave.html
@@ -52,7 +52,11 @@
 
     </div>
 
+    <div class="seller_title">
+        <h1>***   all products   ***</h1>
+    </div>
 
+      
     <div id="container">
 
     </div>
