--- a/luxury/luxury.html
+++ b/luxury/luxury.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="luxury.css">
+
+    <link rel="stylesheet" href="../styles/navbar.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
 
 
@@ -14,8 +19,9 @@
 </style>
 <body>
         <!-- page header -->
+        <div id="navbar2"></div>
 
-    <div id="navbar"></div>
+        <div id="navbar1"></div>
 
     <div class="container">
         <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/category_banner_unisex_1500x.jpg?v=1652784212" alt="error">
@@ -59,8 +65,15 @@
 
      <!-- page footer -->
 
-    <div id="footer"></div>
+     <div id="footer_div">
+
+    </div> 
    
 </body>
 </html>
 <script src="luxury.js" type="module"></script>
+
+<script src="https://kit.fontawesome.com/f592b44598.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+
