--- a/Hair Care/Hair Care.html
+++ b/Hair Care/Hair Care.html
@@ -6,19 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sites-BathAndBodyWorks-Sites</title>
+
   <link rel="stylesheet" href="./Hair Care.css" />
-  <link rel="stylesheet" href="../navbar/style/navbar.css">
-  <link rel="stylesheet" href="../humam_css/footer_h.css">
-  <link rel="shortcut icon"
-    href="https://www.bathandbodyworks.in/on/demandware.static/Sites-BathAndBodyWorks-Site/-/default/dw9d49eb87/images/favicons/favicon-196x196.png"
-    type="image/x-icon">
+
 </head>
 
 <body>
   <div id="navbar"></div>
   <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/collections/1200x235_1900x.jpg?v=1655708130" alt=""
     style="width:100%">
-  <h5 style="font-family:sans-serif; font-weight: 200; font-size: 20px;">Home > Collection > # New Arrivals</h5>
+  <h5 style="font-family:sans-serif; font-weight: 200; font-size: 20px;">Home > Collection > # Hair Care</h5>
 
   <div id="display_sv">
     <div id="dummy_sv">
@@ -66,23 +63,16 @@
     </div>
   </div>
 
-  <div id="footer_h">Footer</div>
+  <div id="footer_h"></div>
 </body>
 
 </html>
 <script src="./Hair Care.js"></script>
-<a href=""></a>
+
 <script type="module">
-  import { navbar_h } from "../navbar/script/navbar.js";
-  var x = document.querySelector("#navbar");
-  x.innerHTML = navbar_h();
 
-  import { footer } from "../navbar/script/footer.js";
-  // console.log(footer());
-  var y = document.querySelector("#footer_h");
-  y.innerHTML = footer();
-
-  import { sidebar } from "../navbar/script/sidebar.js"
+  import { sidebar } from "../scripts/sidebar.js"
   let z = document.querySelector("#dummy_sv")
   z.innerHTML = sidebar();
+
 </script>
