--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bellvitaorganic</title>
     <link rel="stylesheet" href="styles/navbar.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/footer.css">
@@ -24,26 +25,33 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/1200x399_1_59ab296a-15d5-4e1c-84dd-bd35b002e4ce_1500x.png?v=1654536568" class="d-block w-100" alt="...">
+                <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/1200x399_1_59ab296a-15d5-4e1c-84dd-bd35b002e4ce_1500x.png?v=1654536568"
+                    class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/1200x399_580030e8-ad95-4c15-aee3-ab527ecdb5ff_1500x.png?v=1656047949" class="d-block w-100" alt="...">
+                <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/1200x399_580030e8-ad95-4c15-aee3-ab527ecdb5ff_1500x.png?v=1656047949"
+                    class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/1200x399_1208c0c7-85d1-4569-9d7a-e613d6da9f2e_1500x.jpg?v=1655708332" class="d-block w-100" alt="...">
+                <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/1200x399_1208c0c7-85d1-4569-9d7a-e613d6da9f2e_1500x.jpg?v=1655708332"
+                    class="d-block w-100" alt="...">
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
 
-    <div class="carouselExampleControls"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Flexi-Box-1200x235_2_1500x.jpg?v=1655708337" alt=""></div>
+    <div class="carouselExampleControls"><img
+            src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Flexi-Box-1200x235_2_1500x.jpg?v=1655708337"
+            alt=""></div>
     <div class="seller_title">
         <h1>-- bestseller -- </h1>
     </div>
@@ -74,19 +82,28 @@
         <h1>--- IN THE SPOTLIGHT ---</h1>
     </div>
     <div id="IN_THE_SPOTLIGHT">
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Body_Care_V2_460x460.png?v=1651700520" alt="">
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Body_Care_V2_460x460.png?v=1651700520"
+                alt="">
             <p>skin care</p>
         </div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Summer_Essentials_V1_460x460_1962bedb-04b6-4327-9bbe-f7f4bcf1d187_460x460.png?v=1650365075" alt="">
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Summer_Essentials_V1_460x460_1962bedb-04b6-4327-9bbe-f7f4bcf1d187_460x460.png?v=1650365075"
+                alt="">
             <p>skin care</p>
         </div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Sensitive_Skin_V1_460x460_9fe71496-7c02-4c37-8154-eaceb4ef10e4_460x460.png?v=1650365150" alt="">
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Sensitive_Skin_V1_460x460_9fe71496-7c02-4c37-8154-eaceb4ef10e4_460x460.png?v=1650365150"
+                alt="">
             <p>skin care</p>
         </div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Detan_Exfoliation_V1_460x460_8fd7c15d-507c-4dc8-a785-6db9917a6179_460x460.png?v=1650367190" alt="">
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Detan_Exfoliation_V1_460x460_8fd7c15d-507c-4dc8-a785-6db9917a6179_460x460.png?v=1650367190"
+                alt="">
             <p>skin care</p>
         </div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Summer_Essentials_V1_460x460_1962bedb-04b6-4327-9bbe-f7f4bcf1d187_460x460.png?v=1650365075" alt="">
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Summer_Essentials_V1_460x460_1962bedb-04b6-4327-9bbe-f7f4bcf1d187_460x460.png?v=1650365075"
+                alt="">
             <p>skin care</p>
         </div>
     </div>
@@ -94,27 +111,51 @@
         <h1>--- FIND SOLUTIONS FOR ---</h1>
     </div>
     <div id="FIND">
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Tan_Removal_460x460_53aabbb6-f4a1-44f0-b690-659abbbf9a32_460x460.png?v=1650367545" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Dry_Dull_Lips_460x460.png?v=1652016690" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Hair-Loss-_-Thinning-V1_460x460.jpg?v=1657086649" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Pigmentation-v1_460x460.jpg?v=1657086542" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Dandruff_5f511893-20f4-4a0a-9062_460x460.png?v=1650367901" alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Tan_Removal_460x460_53aabbb6-f4a1-44f0-b690-659abbbf9a32_460x460.png?v=1650367545"
+                alt=""></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Dry_Dull_Lips_460x460.png?v=1652016690"
+                alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Hair-Loss-_-Thinning-V1_460x460.jpg?v=1657086649"
+                alt=""></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Pigmentation-v1_460x460.jpg?v=1657086542"
+                alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Dandruff_5f511893-20f4-4a0a-9062_460x460.png?v=1650367901"
+                alt=""></div>
     </div>
     <div class="seller_title">
         <h1>--- LUXURY FRAGRANCES ---</h1>
     </div>
     <div id="LUXURY">
-        <div><img src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_men_680x680.jpg?v=1652265181" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_women_680x680.jpg?v=1652265252" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_little_luxuries_680x680.jpg?v=1652266061" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_unisex_680x680.jpg?v=1652266096" alt=""></div>
-        <div><img src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_giftsets_680x680.jpg?v=1652266120" alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_men_680x680.jpg?v=1652265181"
+                alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_women_680x680.jpg?v=1652265252"
+                alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_little_luxuries_680x680.jpg?v=1652266061"
+                alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_unisex_680x680.jpg?v=1652266096"
+                alt=""></div>
+        <div><img
+                src="https://cdn.shopify.com/s/files/1/0561/9256/5292/files/category_tile_giftsets_680x680.jpg?v=1652266120"
+                alt=""></div>
     </div>
 
-    <div class="carouselExampleControls"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Banner3_1500x.png?v=1650368510" alt=""></div>
-    <div class="carouselExampleControls"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/HP_Perfume_Category_Banner_V2_1500x.png?v=1651687105" alt=""></div>
-    <div class="carouselExampleControls"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Banner4_1500x.png?v=1650362489" alt=""></div>
-    <div class="carouselExampleControls"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Desktop_Brand_Comms_Banner_V2.1_1500x.png?v=1651661695" alt=""></div>
+    <div class="carouselExampleControls"><img
+            src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Banner3_1500x.png?v=1650368510" alt=""></div>
+    <div class="carouselExampleControls"><img
+            src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/HP_Perfume_Category_Banner_V2_1500x.png?v=1651687105"
+            alt=""></div>
+    <div class="carouselExampleControls"><img
+            src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Banner4_1500x.png?v=1650362489" alt=""></div>
+    <div class="carouselExampleControls"><img
+            src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Desktop_Brand_Comms_Banner_V2.1_1500x.png?v=1651661695"
+            alt=""></div>
     <!-- youuibe -->
 
     <iframe width="100%" height="445" src="https://www.youtube.com/embed/65MyOTIWarA?&mute=1">
@@ -123,23 +164,33 @@
     <div class="seller_title">
         <h1>---MEDIA COVERAGE---</h1>
     </div>
-    <div class="carouselExampleControls"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Bella-Cash-Section-Desktop-v3_1500x.jpg?v=1655799639" alt=""></div>
+    <div class="carouselExampleControls"><img
+            src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Bella-Cash-Section-Desktop-v3_1500x.jpg?v=1655799639"
+            alt=""></div>
     <div id="DOWNLOAD_OUR_APP">
         <div>
             <span>DOWNLOAD OUR APP</span>
         </div>
-        <div id="playstore"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/playstore_460x460_efa998ac-e0d8_460x460.png?v=1650369394" alt=""></div>
-        <div id="app-store"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/app-store-card_460x460_35fc55d1_460x460.png?v=1650369409" alt="">
+        <div id="playstore"><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/playstore_460x460_efa998ac-e0d8_460x460.png?v=1650369394"
+                alt=""></div>
+        <div id="app-store"><img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/app-store-card_460x460_35fc55d1_460x460.png?v=1650369409"
+                alt="">
 
         </div>
-        <div id="moapps"> <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Download_our_App_Section_Image_V_460x460.png?v=1650369432" alt=""></div>
+        <div id="moapps"> <img
+                src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Download_our_App_Section_Image_V_460x460.png?v=1650369432"
+                alt=""></div>
     </div>
     <!-- for horizontal line -->
 
     <div id="footer_div">
     </div>
 
-    <div id="whatapps"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/t/287/assets/whatsapp.svg?v=107532592768653809461651698054" alt=""></div>
+    <div id="whatapps"><img
+            src="https://cdn.shopify.com/s/files/1/0054/6665/2718/t/287/assets/whatsapp.svg?v=107532592768653809461651698054"
+            alt=""></div>
 
 
 
@@ -149,5 +200,19 @@
 </html>
 <script src="scripts/index.js" type="module"></script>
 <script src="https://kit.fontawesome.com/f592b44598.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+    integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous">
+
+
+
+
+
+    </script>
+<script src="./all data/data.js">
+
+
+
+</script>
