--- a/New Arrivals/New Arrival.html
+++ b/New Arrivals/New Arrival.html
@@ -6,12 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>New-arrivals</title>
-  <link rel="stylesheet" href="./new.css" />
-  <link rel="stylesheet" href="../navbar/style/navbar.css">
-  <link rel="stylesheet" href="../humam_css/footer_h.css">
-  <link rel="shortcut icon"
-    href="https://www.bathandbodyworks.in/on/demandware.static/Sites-BathAndBodyWorks-Site/-/default/dw9d49eb87/images/favicons/favicon-196x196.png"
-    type="image/x-icon">
+
+  <link rel="stylesheet" href="./NewArrival.css" />
+
+
 </head>
 
 <body>
@@ -22,108 +20,61 @@
 
 
   <div id="display_sv">
+
     <div id="dummy_sv">
-      <!-- <h3> ##Refine By</h3><br />
-      <div>
-        <h4>Categories</h4>
-        <hr>
-        <p style="font-size: 16px">Shop All</p>
-        <p style="font-size: 16px"><a href="New Arrival.html" style="text-decoration: none;">New Arrivals</a></p>
-        <p style="font-size: 16px">Bestsellers</p>
-        <select id="" aria-placeholder="Skin Care" style="border:none; font-size: 15px;">
-          <option value="">Skin Care</option>
-          <option value="">By Product type</option>
-          <option value="">By Concern</option>
-          <option value="">By Skin Type</option>
-        </select><br>
-        <br>
-        <select id="" aria-placeholder="Hair Care" style="border:none;font-size: 15px">
-          <option value="">By Product type</option>
-          <option value="">By Hair Concern</option>
-        </select><br><br>
-        <select id="" aria-placeholder="Body Care" style="border:none;font-size: 15px">
-          <option value="">Bath and Body</option>
-        </select><br><br>
-        <select id="" aria-placeholder="Perfumes" style="border:none;font-size: 15px">
-          <option value="">All Perfumes</option>
-          <option value="">Perfumes For Her</option>
-          <option value="">Unisex Perfumes</option>
-          <option value="">Body Perfume</option>
-          <option value="">Little Luxuries</option>
-          <option value="">Gift Sets</option>
-        </select><br><br>
-        <select id="" aria-placeholder="Combos" style="border:none;font-size: 15px">
-          <option value="">All Combos</option>
-          <option value="">Bestsellers Combos</option>
-          <option value="">Skin Combos</option>
-          <option value="">Hair Combos</option>
-          <option value="">Body Combos</option>
-          <option value="">Perfumes Combos</option>
-          <option value="">C Glow Range</option>
-          <option value="">Kumkumadi Range</option>
-        </select><br>
-        <p style="font-size: 16px">Build a Box</p> -->
-
-
     </div>
-  </div>
-  <div id="details_sv">
-    <p>New & Now</p>
-    <div id="filter">
-      <div id="filter1">
-        <h4>Filter BY:</h4>
-        <form>
-          <select id="type_sv" onChange="handleType()">
-            <option value="">Product Type</option>
-            <option value="New Arrivals">New Arrivals</option>
-          </select>
 
-          <select id="subtype_sv" onChange="handleSubtype()">
-            <option value="">Product Subtype</option>
-            <option value="Gel">Gel</option>
-            <option value="Oil">Oil</option>
-            <option value="Deodorant">Deodorant</option>
-            <option value="Face Wash">Face Wash</option>
-            <option value="Face cream">Face cream</option>
-          </select>
 
-        </form>
+    <div id="details_sv">
+      <p>New & Now</p>
+      <div id="filter">
+        <div id="filter1">
+          <h4>Filter BY:</h4>
+          <form>
+            <select id="type_sv" onChange="handleType()">
+              <option value="">Product Type</option>
+              <option value="New Arrivals">New Arrivals</option>
+            </select>
+
+            <select id="subtype_sv" onChange="handleSubtype()">
+              <option value="">Product Subtype</option>
+              <option value="Gel">Gel</option>
+              <option value="Oil">Oil</option>
+              <option value="Deodorant">Deodorant</option>
+              <option value="Face Wash">Face Wash</option>
+              <option value="Face cream">Face cream</option>
+            </select>
+
+          </form>
+        </div>
+        <div id="filter2">
+          <form>
+            <select id="price_sv" onChange="handlePrice()">
+              <option value="">Sort By Price</option>
+              <option value="LTH">Low to High</option>
+              <option value="HTL">High to Low</option>
+            </select>
+          </form>
+        </div>
       </div>
-      <div id="filter2">
-        <form>
-          <select id="price_sv" onChange="handlePrice()">
-            <option value="">Sort By Price</option>
-            <option value="LTH">Low to High</option>
-            <option value="HTL">High to Low</option>
-          </select>
-        </form>
+      <img src="https://github.com/humamul/Cool-Coders/blob/main/images/text.gif?raw=true" alt="" />
+      <div id="product_sv">
+        <div id="container_sv"></div>
       </div>
     </div>
-    <img src="https://github.com/humamul/Cool-Coders/blob/main/images/text.gif?raw=true" alt="" />
-    <div id="product_sv">
-      <div id="container_sv"></div>
-    </div>
-  </div>
   </div>
 
-  <div id="footer_h">Footer</div>
+
+  <div id="footer_h"></div>
 </body>
 
 </html>
-<script src="./products.js"></script>
-<a href=""></a>
+<script src="./New_Arrival.js"></script>
+
 <script type="module">
-  import { sidebar } from "../components/sidebar.js"
+
+  import { sidebar } from "../scripts/sidebar.js"
   let z = document.querySelector("#dummy_sv")
   z.innerHTML = sidebar();
 
-  import { navbar_h } from "../navbar/script/navbar.js";
-  import { footer } from "../navbar/script/footer.js";
-  // console.log(footer());
-
-  var x = document.querySelector("#navbar");
-  x.innerHTML = navbar_h();
-
-  var y = document.querySelector("#footer_h");
-  y.innerHTML = footer();
 </script>
