--- a/Hair Care/Hair Care.html
+++ b/Hair Care/Hair Care.html
@@ -9,10 +9,20 @@
 
   <link rel="stylesheet" href="./Hair Care.css" />
 
+  <link rel="stylesheet" href="../styles/navbar.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  <link rel="stylesheet" href="../styles/footer.css">
+
 </head>
 
 <body>
-  <div id="navbar"></div>
+  <!-- page header -->
+  <div id="navbar2"></div>
+
+  <div id="navbar1"></div>
+
   <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/collections/1200x235_1900x.jpg?v=1655708130" alt=""
     style="width:100%">
   <h5 style="font-family:sans-serif; font-weight: 200; font-size: 20px;">Home > Collection > # Hair Care</h5>
@@ -63,7 +73,9 @@
     </div>
   </div>
 
-  <div id="footer_h"></div>
+  <div id="footer_div">
+
+  </div>
 </body>
 
 </html>
@@ -75,4 +87,18 @@
   let z = document.querySelector("#dummy_sv")
   z.innerHTML = sidebar();
 
+  import navbar from "../components/navbar.js";
+  import navbar2 from "../components/navbar2.js"
+  import footer from "../components/footer.js"
+
+  document.querySelector("#navbar2").innerHTML = navbar2();
+  document.querySelector("#navbar1").innerHTML = navbar();
+  document.querySelector("#footer_div").innerHTML = footer();
+
 </script>
+
+<script src="https://kit.fontawesome.com/f592b44598.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+  integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+  integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
