--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <style>
+        .sticky {
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
+    </style>
 
 </head>
 
 <body>
+
     <!-- nabar 1st part -->
     <div id="navbar2"></div>
     <div id="navbar1"></div>
+    <!-- <div id="navbar3">jkxgfjkhg</div> -->
     <hr id="hr">
 
     <!-- slide -->
@@ -52,22 +61,7 @@
 
     </div>
 
-    <!-- <div id="perfume_box">
-        <div>
-            <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/hair_care_1_x_1.jpg?v=1658235977" alt="error">
-        </div>
-        <div>
-            <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/hygeine1x1.jpg?v=1658235962" alt="error">
-        </div>
-        <div>
-            <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Facecare1x1_1.jpg?v=1658235962" alt="error">
-        </div>
-        <div>
-            <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Bodycare_1_x_1.jpg?v=1658235962" alt="error">
-        </div>
-        <div>
-            <img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Beardcare_1_x_1.jpg?v=1658235962" alt="error" error>
-        </div>
+
 
     </div> -->
     <div class="seller_title">
@@ -123,6 +117,14 @@
     <div class="seller_title">
         <h1>---MEDIA COVERAGE---</h1>
     </div>
+    <div id="MEDIA_COVERAGE">
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Cosmopolitan_dd968050-37cd-4a45_460x460.png?v=1650368328" alt=""></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/BW_460x460_dcd6c999-6863-4ea2-ae4a-5621f5a51507_460x460.png?v=1650368309" alt=""></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Mint_460x460_554c9975-d981-4b31-8b19-207c9153846e_460x460.png?v=1650368210" alt=""></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/PinkVilla_460x460_5dc5a37a-9af9-450c-ab0b-0f6cd282c2a3_460x460.png?v=1650368190" alt=""></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/TOI_460x460_f53473ac-da04-43f9-a2ba-3d3b99d9e9a1_460x460.png?v=1650368288" alt=""></div>
+        <div><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/PTI_News_1_460x460.png?v=1652796619" alt=""></div>
+    </div>
     <div class="carouselExampleControls"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/files/Bella-Cash-Section-Desktop-v3_1500x.jpg?v=1655799639" alt=""></div>
     <div id="DOWNLOAD_OUR_APP">
         <div>
@@ -148,6 +150,7 @@
 
 </html>
 <script src="scripts/index.js" type="module"></script>
+<script src="/taboo-mine-9522/all data/data.js"></script>
 <script src="https://kit.fontawesome.com/f592b44598.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
